force-app/main/default/objects/VehiculoByChasis__c/VehiculoByChasis__c.object-meta.xml
<CustomObject>
    <label>Vehículo por Chasis</label>
    <nameField>
        <label>Nombre de Vehículo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehículos por Chasis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>