force-app/main/default/objects/VehiculoByChasis__c/fields/Anno__c.field-meta.xml
<CustomField>
    <fullName>Anno__c</fullName>
    <label>Anño del modelo del vehículo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>