force-app/main/default/objects/VehiculoByChasis__c/fields/Chasis__c.field-meta.xml
<CustomField>
    <fullName>Chasis__c</fullName>
    <label>Chasis del vehículo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>