force-app/main/default/objects/VehiculoByChasis__c/fields/CodigoVehiculo__c.field-meta.xml
<CustomField>
    <fullName>CodigoVehiculo__c</fullName>
    <label>Código del vehículo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>