force-app/main/default/objects/VehiculoByChasis__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color del vehículo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>