force-app/main/default/objects/VehiculoByChasis__c/fields/ImpAduana__c.field-meta.xml
<CustomField>
    <fullName>ImpAduana__c</fullName>
    <label>Impuesto de aduana del vehículo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>