force-app/main/default/objects/VehiculoByChasis__c/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <label>Motor del vehículo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>